# nwHacks-2022

./: README.md  main.py  pyproject.toml
chat/: client.py  server.py
static/css/: home.css  room.css
static/js/: pomodoro.js
templates/: 404.html  home.html  room.html
